--- a/requirements.txt
+++ b/requirements.txt
@@ -22,4 +22,7 @@ pydantic-settings==2.10.1
 google-ai-generativelanguage==0.6.18
 openai==1.91.0
 
+# WhatsApp integration
+twilio==9.6.3
+
 # Additional dependencies may be added as the project grows 
