--- a/env.example
+++ b/env.example
@@ -8,11 +8,9 @@ SUPABASE_KEY=your_supabase_anon_key_here
 # Google AI Configuration
 GOOGLE_API_KEY=your_google_ai_api_key_here
 
-# Twilio WhatsApp Configuration
-TWILIO_ACCOUNT_SID=your_twilio_account_sid_here
-TWILIO_AUTH_TOKEN=your_twilio_auth_token_here
-TWILIO_PHONE_NUMBER=whatsapp:+1234567890
-TEAM_WHATSAPP_GROUP=your_team_whatsapp_group_id_here
+# Telegram Configuration (Required for messaging)
+TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
+TELEGRAM_CHAT_ID=your_telegram_group_chat_id_here
 
 # Optional: OpenAI Configuration (for future use)
 # OPENAI_API_KEY=your_openai_api_key_here 
