--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,12 @@ requests==2.31.0
 flask==3.0.0
 psutil==5.9.6
 
+# AI/ML dependencies
+crewai==0.28.0
+langchain==0.1.0
+langchain-community==0.0.10
+litellm==1.30.0
+
 # Additional utilities
 pydantic==2.5.0
 typing-extensions==4.8.0
