🚀 Production-ready deployment with hybrid Gemini/Ollama AI system
- ✅ Added hybrid configuration system (Ollama local / Google AI production)
- ✅ Integrated Google Gemini AI with CrewAI agents
- ✅ Cleaned up codebase (removed 20+ redundant files)
- ✅ Added comprehensive testing and documentation
- ✅ Fixed CrewAI compatibility with dummy OpenAI API key
- ✅ Validated all core functionality
- ✅ Ready for Railway deployment with production AI

--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ langchain==0.1.0
 langchain-community==0.0.20
 langchain-core==0.1.20
 langchain-ollama==0.1.0
+langchain-google-genai==0.0.6
 litellm==1.30.0
 
 # AI model dependencies
