--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ langchain==0.1.19
 langchain-community==0.0.38
 langchain-core==0.1.52
 langchain-google-genai==0.0.6
-langchain-ollama==0.1.0
+# langchain-ollama==0.1.0  # Removed for production compatibility
 langsmith==0.1.17
 litellm==1.30.0
 lxml==5.1.0
