--- a/requirements.txt
+++ b/requirements.txt
@@ -1,57 +1,33 @@
-aiohttp==3.9.3
-annotated-types==0.7.0
-anthropic==0.18.1
-anyio==4.9.0
-asyncpg==0.29.0
-beautifulsoup4==4.12.3
-certifi==2025.6.15
-chardet==5.2.0
-charset-normalizer==3.4.2
-crewai==0.28.0
-deprecation==2.1.0
-duckduckgo_search==4.4
+# Core dependencies for KICKAI
+python-telegram-bot==20.7
+supabase==2.3.4
+python-dotenv==1.0.0
 Flask==3.0.0
-gotrue==2.9.1
-h11==0.16.0
-h2==4.2.0
-hpack==4.1.0
-httpcore==1.0.9
-httpx==0.25.2
-hyperframe==6.1.0
-idna==3.10
-jsonpatch==1.33
-jsonpointer==3.0.0
+requests==2.31.0
+charset-normalizer==3.4.2
+
+# AI and CrewAI dependencies
+crewai==0.28.0
 langchain==0.1.19
 langchain-community==0.0.38
 langchain-core==0.1.52
 langchain-google-genai==0.0.6
-# langchain-ollama==0.1.0  # Removed for production compatibility
-langsmith==0.1.17
-litellm==1.30.0
-lxml==5.1.0
 openai==1.13.3
-orjson==3.10.18
-# packaging - let pip resolve automatically
+litellm==1.30.0
+
+# Database and HTTP
+httpx==0.25.2
+asyncpg==0.29.0
 postgrest==0.15.1
-psutil==5.9.6
+realtime==1.0.6
+storage3==0.7.7
+
+# Utilities
 pydantic==2.5.0
 pydantic_core==2.14.1
 python-dateutil==2.9.0.post0
-python-dotenv==1.0.0
-python-telegram-bot==20.7
-PyYAML==6.0.2
-realtime==1.0.6
-requests==2.31.0
-requests-toolbelt==1.0.0
-six==1.17.0
-sniffio==1.3.1
-storage3==0.7.7
-StrEnum==0.4.15
-structlog==24.1.0
-supabase==2.3.4
-supafunc==0.3.3
 tenacity==8.2.3
-typing_extensions==4.14.0
-urllib3==2.5.0
-websockets==12.0
-zstandard==0.23.0
+structlog==24.1.0
+
+# Let pip resolve packaging automatically
+# packaging will be installed by dependencies 
