--- a/requirements.txt
+++ b/requirements.txt
@@ -3,16 +3,17 @@ python-telegram-bot==20.7
 supabase==2.3.4
 python-dotenv==1.0.0
 Flask==3.0.0
-requests==2.31.0
+requests==2.32.4
 charset-normalizer==3.4.2
 
 # AI and CrewAI dependencies
-crewai==0.28.0
-langchain==0.1.19
-langchain-community==0.0.38
-langchain-core==0.1.52
+crewai==0.28.8
+langchain==0.2.16
+langchain-community==0.2.16
+langchain-core==0.2.16
 langchain-google-genai==0.0.6
-openai==1.13.3
+openai==1.58.1
+google-generativeai==0.8.5
 litellm==1.30.0
 
 # Database and HTTP
@@ -28,6 +29,10 @@ pydantic_core==2.14.1
 python-dateutil==2.9.0.post0
 tenacity==8.2.3
 structlog==24.1.0
+
+# Development and testing
+pytest==8.0.0
+pytest-asyncio==0.24.0
 
 # Let pip resolve packaging automatically
 # packaging will be installed by dependencies 
