--- a/.gitignore
+++ b/.gitignore
@@ -106,6 +106,9 @@ ENV/
 env.bak/
 venv.bak/
 
+# Firebase credentials
+firebase_settings.json
+
 # Spyder project settings
 .spyderproject
 .spyderworkspace
