--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,11 @@ Flask==3.0.0
 requests==2.32.4
 charset-normalizer==3.4.2
 
-# AI and CrewAI dependencies
+# AI and CrewAI dependencies - compatible versions
 crewai==0.28.8
-langchain==0.2.16
-langchain-community==0.2.16
-langchain-core==0.2.16
+langchain==0.1.10
+langchain-community==0.0.20
+langchain-core==0.1.30
 langchain-google-genai==0.0.6
 openai==1.58.1
 google-generativeai==0.8.5
