--- a/requirements-local.txt
+++ b/requirements-local.txt
@@ -1,4 +1,7 @@
-# Core dependencies for KICKAI (Railway Production)
+# Local Development Dependencies for KICKAI
+# Use this for local development with Ollama and CrewAI
+
+# Core dependencies
 python-telegram-bot==20.7
 python-dotenv==1.0.0
 Flask==3.0.0
@@ -8,12 +11,15 @@ charset-normalizer==3.4.2
 # Firebase dependencies
 firebase-admin==6.4.0
 
-# AI and LangChain dependencies - Railway compatible
+# AI and CrewAI dependencies - local development
+crewai==0.28.8
 langchain==0.1.10
 langchain-community==0.0.20
 langchain-core==0.1.30
+langchain-ollama==0.1.0
 openai==1.58.1
 google-generativeai==0.8.5
+litellm==1.30.0
 
 # HTTP and utilities
 httpx==0.25.2
@@ -23,5 +29,6 @@ python-dateutil==2.9.0.post0
 tenacity==8.2.3
 structlog==24.1.0
 
-# Railway health check
-gunicorn==21.2.0 
+# Development and testing
+pytest==8.0.0
+pytest-asyncio==0.24.0 
