Add missing dependencies and improve Firebase initialization with better error handling

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,17 @@ firebase-admin
 requests
 gunicorn
 
+# AI and LangChain dependencies
+langchain
+langchain-community
+langchain-core
+openai
+google-generativeai
+
+# HTTP and utilities
+httpx
+pydantic
+python-dateutil
+tenacity
+structlog
+
