--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,9 @@ gunicorn
 langchain
 langchain-community
 langchain-core
-langchain-google-genai
-openai
+langchain-google-genai==2.1.5
 google-generativeai
+google-ai-generativelanguage
 
 # HTTP and utilities
 httpx
