--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,34 @@
 # Ultra-minimal requirements for Railway - only essential packages
-python-telegram-bot
-python-dotenv
-Flask
-firebase-admin
-requests
-gunicorn
+python-telegram-bot==20.7
+python-dotenv==1.0.0
+Flask==3.0.0
+firebase-admin==6.4.0
+requests==2.32.4
+gunicorn==21.2.0
 
 # Build dependencies for Railway
-setuptools
-wheel
+setuptools==69.0.3
+wheel==0.42.0
 
-# AI and LangChain dependencies
-langchain
-langchain-community
-langchain-core
-langchain-google-genai
-google-generativeai
-google-ai-generativelanguage
+# AI and LangChain dependencies - COMPATIBLE VERSIONS
+# These versions are tested to work together without metaclass conflicts
+langchain==0.1.10
+langchain-community==0.0.25
+langchain-core==0.1.53
+google-generativeai==0.8.5
 
-# HTTP and utilities
-httpx
-pydantic
-python-dateutil
-tenacity
-structlog
+# CrewAI - compatible version
+crewai==0.28.8
+
+# HTTP and utilities - COMPATIBLE VERSIONS
+httpx==0.28.1
+pydantic==2.11.7
+pydantic_core==2.33.2
+python-dateutil==2.9.0.post0
+tenacity==8.2.3
+structlog==24.1.0
+
+# Additional dependencies for compatibility
+packaging==23.2
+typing-extensions==4.14.0
 
