feat: Implement comprehensive bot configuration management system
- Add bot configuration manager supporting local files and Firestore
- Support multiple teams with dual bots (main + leadership)
- Create CLI tools for configuration management
- Add interactive setup script for easy configuration
- Update telegram tools to use new configuration system
- Add comprehensive documentation and security guidelines
- Exclude sensitive config files from git
- Add validation and testing tools

This system provides:
- Local file-based config for testing/staging
- Firestore-based config for production
- Support for multiple teams with dual bots
- Environment-specific configuration loading
- Security best practices and validation

--- a/.gitignore
+++ b/.gitignore
@@ -109,6 +109,13 @@ venv.bak/
 # Firebase credentials
 firebase_settings.json
 
+# Bot configuration files (contain sensitive tokens)
+config/bot_config.json
+config/bot_config.staging.json
+config/bot_config.production.json
+config/bot_config.*.json
+!config/bot_config.example.json
+
 # Spyder project settings
 .spyderproject
 .spyderworkspace
