Implement Railway's official secrets management for Firebase credentials
- Add setup script for Railway's recommended approach
- Update Firebase client to prioritize FIREBASE_CREDENTIALS_JSON from dashboard
- Create comprehensive guide for Railway secrets management
- Set all non-sensitive environment variables
- Follow Railway's official recommendations for large sensitive data
- Fix PEM file truncation issues with proper secrets management
- Add Firebase credentials files to .gitignore for security

--- a/.gitignore
+++ b/.gitignore
@@ -106,8 +106,16 @@ ENV/
 env.bak/
 venv.bak/
 
-# Firebase credentials
+# Firebase credentials (should never be committed)
+firebase_creds_*.json
+firebase-credentials-*.json
 firebase_settings.json
+firebase_creds_production.json
+firebase_creds_staging.json
+firebase_creds_testing.json
+firebase-credentials-production.json
+firebase-credentials-staging.json
+firebase-credentials-testing.json
 
 # Bot configuration files (contain sensitive tokens)
 config/bot_config.json
