Add Ollama support for local development
- Configure Ollama with Llama 3.1 8B Instruct for local development
- Update AI configuration to handle Ollama provider properly
- Add environment-specific model selection (Ollama for local, Google Gemini for production)
- Create env.local.example with Ollama configuration
- Update README with local development instructions
- Add validation for Ollama service and model availability
- Fix LLM creation in crew_agents.py to properly handle Ollama
- Ensure proper fallback between AI providers

Local development now uses:
- AI_PROVIDER=ollama
- AI_MODEL_NAME=llama3.1:8b-instruct-q4_0
- Fast, efficient local inference
- No API costs during development

--- a/env.example
+++ b/env.example
@@ -16,11 +16,20 @@ TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
 TELEGRAM_WEBHOOK_URL=your_webhook_url_here
 
 # AI Configuration
-GOOGLE_API_KEY=your_google_api_key_here
-OPENAI_API_KEY=your_openai_api_key_here  # Required by CrewAI even if using Gemini
+# For Production (Railway): Use Google Gemini
+# For Local Development: Use Ollama
+AI_PROVIDER=ollama  # google_gemini, openai, or ollama
+AI_MODEL_NAME=llama3.1:8b-instruct-q4_0  # For Ollama: llama3.1:8b-instruct-q4_0
+AI_TEMPERATURE=0.7
+AI_MAX_TOKENS=1000
+AI_TIMEOUT=60
+
+# API Keys (only needed for cloud providers)
+GOOGLE_API_KEY=your_google_api_key_here  # Only needed for google_gemini
+OPENAI_API_KEY=your_openai_api_key_here  # Required by CrewAI even if using other providers
 
 # Environment Configuration
-ENVIRONMENT=production  # development or production
+ENVIRONMENT=development  # development or production
 RAILWAY_ENVIRONMENT=production
 
 # Port Configuration
