--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,37 +7,43 @@ repos:
       - id: check-yaml
       - id: check-added-large-files
       - id: check-merge-conflict
+      - id: debug-statements
       - id: check-case-conflict
       - id: check-docstring-first
       - id: check-json
-      - id: check-toml
-      - id: debug-statements
+      - id: check-merge-conflict
+      - id: check-symlinks
+      - id: detect-private-key
       - id: name-tests-test
       - id: requirements-txt-fixer
 
-  - repo: https://github.com/astral-sh/ruff-pre-commit
-    # Ruff version
-    rev: v0.1.8
+  - repo: https://github.com/psf/black
+    rev: 24.1.0
     hooks:
-      # Run the linter
+      - id: black
+        language_version: python3.11
+        args: [--line-length=100]
+
+  - repo: https://github.com/astral-sh/ruff
+    rev: v0.2.0
+    hooks:
       - id: ruff
-        args: [--fix]
-      # Run the formatter  
+        args: [--fix, --exit-non-zero-on-fix]
       - id: ruff-format
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.8.0
     hooks:
       - id: mypy
-        additional_dependencies: [types-all]
+        additional_dependencies: [types-requests]
         args: [--ignore-missing-imports]
 
   - repo: local
     hooks:
-      - id: import-linter
-        name: Import Linter
-        entry: python scripts/check_imports.py
+      - id: typing-imports-check
+        name: Check Typing Imports
+        entry: python scripts/check_typing_imports.py
         language: system
+        types: [python]
         pass_filenames: false
-        always_run: true
-        stages: [pre-commit] 
+        always_run: true 
