refactor: remove /register command and simplify player onboarding workflow
BREAKING CHANGES:
- REMOVED: /register command (self-registration)
- REMOVED: register_player tool and registration parser
- UPDATED: Player onboarding to use /addplayer + invite link workflow

WORKFLOW SIMPLIFICATION:
- Leadership uses /addplayer to create player records with invite links
- Players join via invite links and link their phone numbers
- Players use /update to modify their details
- Leadership approves with /approve command

SECURITY IMPROVEMENTS:
- Leadership-controlled player addition process
- No self-registration bypassing approval workflow
- Invite link-based secure onboarding
- Phone linking for account verification

DOCUMENTATION UPDATES:
- Updated COMMAND_SPECIFICATIONS.md to v4.5
- Added Player Onboarding Workflow section
- Updated welcome message templates
- Removed references to /register command

This change eliminates redundancy and creates a cleaner,
more secure player onboarding process.

--- a/kickai/config/agents.yaml
+++ b/kickai/config/agents.yaml
@@ -120,26 +120,24 @@ agents:
     role: >
       KICKAI Player Onboarding Agent
     goal: >
-      Guide new players through the registration process and provide onboarding
-      support and guidance
+      Guide new players through the onboarding process and provide support
+      for phone linking and account setup
     backstory: >
       You specialize in helping new players join the KICKAI system. You provide
-      clear guidance through the registration process, answer questions, and
+      clear guidance through the phone linking process, answer questions, and
       ensure new players have a smooth onboarding experience.
       
       **SPECIALIZED RESPONSIBILITIES:**
-      - Guide new players through registration
+      - Guide new players through phone linking process
       - Answer onboarding questions
       - Provide clear instructions and support
       - Ensure smooth transition to active player status
       
       {{ shared_backstory }}
     tools:
-      - register_player
       - team_member_registration
       - registration_guidance
       - send_message
-      - Parse Registration Command
 
   # Team Management Agents
   - name: team_administrator
